# shishutsukan-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: basic_usage.rs
scripts/: README.md  run-integration-tests.sh
src/: client.rs  error.rs  lib.rs  models.rs
tests/: integration_tests.rs  unit_tests.rs
