[package]
name = "shishutukan"
version = "0.1.0"
edition = "2021"
authors = ["petitstrawberry"]
license = "MIT"
description = "Rust client library for Shishutsukan expense management API"
repository = "https://github.com/petitstrawberry/shishutukan-rs"
keywords = ["api", "client", "expense", "management"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"
